fixed footer overflow on <1440px width

--- a/frontend/src/components/SliderCardBottom/SliderCardBottom.module.scss
+++ b/frontend/src/components/SliderCardBottom/SliderCardBottom.module.scss
@@ -43,6 +43,7 @@
     font-size: 17px;
     line-height: 135%;
     color: #121210;
+    overflow: hidden;
   }
 
   & > .signature {
